tests/errmsgs/tstring_range.nim
discard """
  errormsg: "cannot create a range of strings"
  line: 8
"""

var x = "a"
case x
of "a".."def":
  discard
